--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,86 +1,165 @@
-/* contact page elements */
-input[type=text], select, textarea {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-top: 6px;
-    margin-bottom: 16px;
-    resize: vertical;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+/* center content on all pages */
+body {
+    display:block;
+    margin:0 auto;
+    width:960px;
 }
 
-/* contact page submit button */
-input[type=submit] {
-    background-color: #4aaaa5;
-    color: #ffffff;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-}
-
-/* about me page image with text flow */
-img {
-    float: left;
-    padding: 20px;
+/*white box around header */
+#header {
+    background-color: #ffffff;
+    border: 1px solid #dddddd;
 }
 
 /*my name on each page*/
-#myName {
-    display: block;
+h1 {
     background-color: #4aaaa5;
     color: #ffffff;
-    font-family: 'Georgia', Times, Times New Roman, serif;
-    margin-left: 100px;
-    width: auto;
+    display: block;
     float: left;
+    font-family: 'Georgia', Times, Times New Roman, serif;
     height: 60px;
-    margin-top:10px;
-    text-align: center;
+    margin-top:20px;
     overflow: hidden;
+    text-align: center;
+    width: 270px;
 }
 
 /* navigation bar */
 ul {
+    float:right;
     list-style-type: none;
     margin:0;
     padding: 0;
+
 }
 
 li {
     display:inline;
-    float: right;
+
 }
 
-/*keeping links the same color, even when clicked on */
+/*keeping links the same color, even when clicked on for nav bar*/
 a {
-    display: block;
-    padding: 8px;
     color: #777777;
+    display: block;
     font-family: 'Georgia', Times, Times New Roman, serif;
-    text-decoration: none;
     font-size: 80%;
+    padding: 8px;
+    text-decoration: none;
 }
 
-/*about, portfolio, contact headers */
+/*about, portfolio, contact headers for all pages*/
 h2 {
+    border-collapse: separate;
+    border-bottom: 2px solid #dddddd;
+    border-spacing:15px 50px;
     color:#4aaaa5;
     font-family: 'Georgia', Times, Times New Roman, serif;
-    text-align: left;
-    width: 320px;
-    border: none;
-    margin:0;
-    margin-left:100px;
+    margin:1em;
+    margin-top: 30px;
     padding:5px;
+    padding-left:18px;
+    padding-bottom: 5px;
+    width: 870px;
+}
+
+/*the white box around content for all pages*/
+.box {
+    background-color: #ffffff;
+    border: 1px solid #dddddd;
     margin-top: 80px;
 }
 
-/*the white box around content */
-.box {
-    border: 1px solid #777777;
-    width: 960px;
-    margin-left: 100px;
+/* contact page elements */
+label {
+    display:block;
+    letter-spacing:2px;
+    margin-top: 30px;
+    padding-left:18px;
 }
+
+/*the entire contact form layout - outside the boxes */
+form {
+    color: #777777;
+    margin:0 auto;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    padding-left: 18px;
+    width: 960px;
+}
+
+/*the name and email boxes */
+input, texarea {
+    background-color: #ffffff;
+    border: 1px solid #dddddd;
+    color: #777777;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    font-size: 0.9em;
+    height: 27px;
+    margin-top:3px;
+    padding:10px;
+    width: 880px;
+
+}
+ /* the message box */
+textarea {
+    background-color: #ffffff;
+    border:1px solid #dddddd;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    height:213px;
+    width: 900px;
+
+}
+
+#submit {
+    background-color: #4aaaa5;
+    border:none;
+    color: #ffffff;
+    cursor:pointer;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    font-size:1.5em;
+    height:38px;
+    margin-top:20px;
+    padding:15px;
+    text-indent:-9999px;
+    width:127px;
+}
+
+    #submit:hover {
+        opacity:.9;
+    }
+
+/* about me page image with text flow */
+img {
+    float: left;
+    margin: 0px 15px 15px 0px;
+    padding: 15px;
+}
+
+/* paragraph on about me section */
+p {
+    color: #777777;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    padding: 7px;
+    padding-left: 18px;
+    padding-right: 18px;
+}
+
+/* Container holding image and text in Portfolio Page */
+.image {
+    margin-top:10px;
+    position: relative;
+}
+
+a span {
+    background-color: #4aaaa5;
+    background-position: relative;
+    color: #ffffff;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    left: 0;
+    padding:10px;
+    position: absolute;
+    top: 200px;
+    width:100%;
+}
+
