--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,39 +1,58 @@
 /*keeping links the same color, even when clicked on for nav bar*/
 a {
-    color: #777777;
+    color: #8a8a8a;
     display: block;
     font-family: 'Georgia', Times, Times New Roman, serif;
     font-size: 80%;
     text-decoration: none;
 }
 
-a span {
-    background-color: #4aaaa5;
-    background-position: relative;
-    color: #ffffff;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-    left: 0;
-    padding:10px;
-    position: absolute;
-    top: 200px;
-    width:100%;
+/* relative positioning in portfolio */
+.box {
+    position: relative;
+    height: 200px;
+    width:225px;
+}
+
+/* relative positioning in portfolio */
+.box-1 {
+    background-image: url("../images/placeimg_640_480_animals (2).jpg");
+}
+
+/* relative positioning in portfolio */
+.box-2 {
+    background-image: url("../images/placeimg_640_480_animals (1).jpg");
+    left:275px;
+    top:-216px;
+}
+
+/* relative positioning in portfolio */
+.box-3 {
+    background-image: url("../images/placeimg_640_480_animals (3).jpg");
+    top:-185px;
+}
+
+/* relative positioning in portfolio */
+.box-4 {
+    background-image: url("../images/placeimg_640_480_animals.jpg");
+    left:275px;
+    top:-400px;
+}
+
+/* relative positioning in portfolio */
+
+.box-5 {
+    background-image: url("../images/placeimg_640_480_nature.jpg");
+    top:-375px;
 }
 
 /*the white box around content for all pages*/
-.box {
+.box-set {
     background-color: #ffffff;
     border: 1px solid #dddddd;
     margin: 50px auto;
     width:960px;
-}
-
-/*the entire contact form layout - outside the boxes */
-form {
-    color: #777777;
-    margin:0 auto;
-    font-family: 'Georgia', Times, Times New Roman, serif;
-    padding-left: 18px;
-    width: 960px;
+    position:relative;
 }
 
 /*about, portfolio, contact headers for all pages*/
@@ -49,6 +68,19 @@ form {
     padding-left:18px;
     padding-bottom: 5px;
     width: 870px;
+}
+/*the entire contact form layout - outside the boxes */
+form {
+    border:0px solid lightgrey;
+    color: #777777;
+    margin:0 50px;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    padding: 0px 0px 10px auto;
+    width: 800px;
+}
+
+form div + div {
+    margin-top: 1em;
 }
 
 /*white box around header */
@@ -72,6 +104,7 @@ form {
 /* navigation bar */
 .header-nav li {
     float: left;
+    padding:10px;
 }
 
 /*my name on each page*/
@@ -82,17 +115,12 @@ form {
     float: left;
     font-family: 'Georgia', Times, Times New Roman, serif;
     height: 60px;
+    line-height:2px;
     margin-left:225px;
     overflow: hidden;
     padding: 1em;
     text-align: center;
     width: 270px;
-}
-
-/* Container holding image and text in Portfolio Page */
-.image {
-    margin-top:10px;
-    position: relative;
 }
 
 /* about me page image with text flow */
@@ -102,25 +130,24 @@ img {
     padding: 15px;
 }
 
-/*the name and email boxes */
+/* the name and email boxes on contact page */
 input, texarea {
     background-color: #ffffff;
     border: 1px solid #dddddd;
+    box-sizing:border-box;
     color: #777777;
-    font-family: 'Georgia', Times, Times New Roman, serif;
-    font-size: 0.9em;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     height: 27px;
-    margin-top:3px;
-    padding:10px;
     width: 880px;
 }
 
 /* contact page elements */
 label {
-    display:block;
-    letter-spacing:2px;
-    margin-top: 30px;
-    padding-left:18px;
+    color: #777777;
+    display:inline-block;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    margin-bottom: 10px;
+    text-align:left;
 }
 
 /* paragraph on about me section */
@@ -132,31 +159,41 @@ p {
     padding-right: 18px;
 }
 
-/* contact page submit button */
-#submit {
-    background-color: #4aaaa5;
-    border:none;
+.projects {
+    background-color:#4aaaa5;
+    background-position: center;
     color: #ffffff;
-    cursor:pointer;
-    font-family: 'Georgia', Times, Times New Roman, serif;
-    font-size:1.5em;
-    height:38px;
-    margin-top:20px;
-    padding:15px;
-    text-indent:-9999px;
-    width:127px;
+    font-size:17px;
+    font-family: 'Georgia', Times, Times New Roman, serif;    
+    height:40px;
+    line-height:40px;
+    position:absolute;
+    text-align: center;
+    top:155px;
+    width:225px;
 }
 
 /* contact page submit button */
-    #submit:hover {
-        opacity:.9;
-    }
+.button {
+    background-color: #4aaaa5;
+    border:none;
+    color:white;
+    cursor: pointer;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    padding: 15px 32px;
+    text-align:center;
+    text-decoration:none;
+    display: inline-block;
+    font-size:17px;
+    margin: 4px 2px;
+}
 
- /* the message box */
+ /* the message box in contact page */
 textarea {
     background-color: #ffffff;
     border:1px solid #dddddd;
     font-family: 'Georgia', Times, Times New Roman, serif;
     height:213px;
-    width: 900px;
+    vertical-align: top;
+    width: 875px;
 }
